Fixed view on mobile

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
 main {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 h1,
@@ -30,6 +32,7 @@ td {
 header {
     padding: 1em;
     display: flex;
+    width: 90%;
     flex-direction: column;
     justify-self: center;
     align-items: center;
@@ -126,6 +129,7 @@ fieldset {
 footer {
     display: flex;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    margin: 2%;
 }
